# llm.c

./: CMakeLists.txt  Makefile  train_gpt2.c  train_gpt2.cu
.github/workflows/: cmake.yml
llmc/: dataloader.h  tokenizer.h
